# FreeMeeting

./: .gitignore  11.txt  Wechat.pro  asrclient.cpp  asrclient.h  avsyncmanager.cpp  avsyncmanager.h  build-release.ps1  cjson.h  ckernel.cpp  ckernel.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  releaseconfig.ini  resourcce.qrc  roomdialog.cpp  roomdialog.h  roomdialog.ui  usershow.cpp  usershow.h  usershow.ui  videodecoder.h  videoencoder.cpp  videoencoder.h  wechatdialog.cpp  wechatdialog.h  wechatdialog.ui
OpusApi/: AudioWorld.h  OpusApi.pri  sdlaudioread.cpp  sdlaudioread.h  sdlaudiowrite.cpp  sdlaudiowrite.h
WeChat/: WeChat.pro  avsyncmanager.cpp  avsyncmanager.h  ckernel.cpp  ckernel.h  deepseek.cpp  deepseek.h  deepseek.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  resource.qrc  roomdialog.cpp  roomdialog.h  roomdialog.ui  usershow.cpp  usershow.h  usershow.ui  videodecoder.cpp  videodecoder.h  videoencoder.cpp  videoencoder.h  wechatdialog.cpp  wechatdialog.h  wechatdialog.ui
__FaceDetect__/: FaceDetect.pro  FaceDetect.pro.user.b7be0b8  capturesample.cpp  capturesample.h  common.h  dialog.cpp  dialog.h  dialog.ui  facedetect.cpp  facedetect.h  main.cpp
asr_helper/: CMakeLists.txt  build.bat  build_msvc.bat  main_win32.cpp
audioapi/: audioapi.pri  audioread.cpp  audioread.h  audiowrite.cpp  audiowrite.h  word.h
netapi/: netapi.pri
resource/: RSA 公钥私钥举例.txt  packdef.h.txt  threadworker.cpp  threadworker.h
sherpaApi/: sherpaApi.pri  sherpaOnnxManager.cpp  sherpaOnnxManager.h
videoapi/: common.h  myfacedetact.cpp  (+8 more)
(+55 files in other folders)
